--- a/theme.cfg
+++ b/theme.cfg
@@ -1,2 +1,8 @@
 name: Epic memories
 author: Thomas Traineau
+summary: A theme focusing on big screen arts and sound effects 
+keywords: 4K, largescreen, videos, 
+assets.screenshots:
+  .meta/1.jpg
+  .meta/2.jpg
+  .meta/3.jpg
